# Capston-modul3-AI-engineer---Chatbot-IMDB

./: .gitignore  README.md  eksperiment.ipynb  main.py  pyproject.toml  requirements.txt
chatbot/: chatbot_result.py  config.py
chatbot/data/process/: IMDB_FILM.db  IMDB_FILM_capston3.db
chatbot/graph/: agent.py  graph.py  state.py
chatbot/prompt/: agent_prompt.py  supervisor.py
chatbot/tools/: tool.py
chatbot/utils/: Process_data_tp_sql_and_qdrant.py  make_sql_data.py
