[project]
name = "capston3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "langchain>=1.2.15",
    "langchain-core>=1.3.0",
    "langchain-openai>=1.1.14",
    "langchain-qdrant>=1.1.0",
    "langfuse>=4.3.1",
    "langgraph>=1.1.7",
    "pandas>=3.0.2",
    "qdrant-client>=1.17.1",
    "sqlalchemy>=2.0.49",
    "uuid>=1.30",
]
