[project]
name = "capston3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
[tool.poetry]
packages = [{include = "chatbot"}]
dependencies = [
    "dotenv>=0.9.9",
    "huggingface-hub>=1.11.0",
    "ipykernel>=7.2.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.0",
    "langchain-openai>=1.1.14",
    "langchain-qdrant>=1.1.0",
    "langchain-qwq>=0.3.4",
    "langfuse>=4.3.1",
    "langgraph>=1.1.7",
    "langsmith>=0.7.32",
    "pandas>=3.0.2",
    "qdrant-client>=1.17.1",
    "sentence-transformers>=5.4.1",
    "sqlalchemy>=2.0.49",
    "tqdm>=4.67.3",
    "uuid>=1.30",
]
