[project]
name = "capston3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "huggingface-hub>=1.11.0",
    "ipykernel>=7.2.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.0",
    "langchain-deepseek>=1.0.1",
    "langchain-openai>=1.2.0",
    "langchain-qdrant>=1.1.0",
    "langfuse>=4.5.0",
    "langgraph>=1.1.9",
    "pandas>=3.0.2",
    "qdrant-client>=1.17.1",
    "sentence-transformers>=5.4.1",
    "sqlalchemy>=2.0.49",
    "tqdm>=4.67.3",
    "uuid>=1.30",
]
[tool.setuptools.packages.find]
where = ["."]
include = ["chatbot*"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
